<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_AX8108" Id="{27df3599-5884-4e9c-845c-1a13e5935d53}">
    <Declaration><![CDATA[TYPE ST_AX8108 EXTENDS ST_Motor :
STRUCT
	//Terminal 45 AX8108-0100-0000	| Servomotor Driver with FSoE SS1 and STO, (Axis 1)
	//M1 Motor Stage Collection Vertical Axis
	
	//M1 Motor Safety
	bTS_Run									AT %Q*		: BOOL;
	bTS_ErrorAck							AT %Q*		: BOOL;
	
	//New variables
	rHomeVel      : LREAL;   // Homing Speed
	rHomeAcc	  : LREAL;   // Homing Acceleration	
	rHomeDec	  : LREAL;   // Homing Speed Deceleration
    rTargetPos    : LREAL;   // Absolute target position
    rTargetVel    : LREAL;   // Absolute target speed
    rAcceleration : LREAL;   // Default Acceleration for movements
    rDeceleration : LREAL;   // Default Deceleration for movements
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>